# generative-ui

./: .gitignore  README.md  pyproject.toml
backend/: agent.py  main.py  schemas.py
curator_app/: app.py  llm.py  tools.py
curator_app/static/js/: main.js
curator_app/templates/: index.html
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CartConfirmation.tsx  ProductCard.tsx  ProductList.tsx  WeatherCard.tsx
tool_ui_chatbot/: app.py  llm.py  tools.py
tool_ui_chatbot/static/css/: style.css
tool_ui_chatbot/static/js/: main.js
tool_ui_chatbot/templates/: index.html
