[project]
name = "chat-to-ui"
version = "0.1.0"
description = "Chatbot UI with tool-calling"
authors = [{ name = "ujjwal-basnet" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"