[project]
name = "chat-to-ui"
version = "0.1.0"
description = "Chatbot UI with tool-calling"
authors = [{ name = "ujjwal-basnet" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "pydantic-ai>=1.67.0",
    "jinja2>=3.1.6",
    "langchain-google-genai>=4.2.1",
    "langchain-core>=1.2.17",
    "langchain>=1.2.10",
    "dotenv>=0.9.9",
    "langgraph>=1.0.10",
    "langchain-openai>=1.1.10",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Explicitly include packages
[tool.setuptools]
packages = ["tool_ui_chatbot", "backend", "frontend", "curator_app"]
